--- a/src/layouts/components/Header/Header.module.scss
+++ b/src/layouts/components/Header/Header.module.scss
@@ -13,7 +13,6 @@
     width: 100%;
     height: var(--default-layout-header-height);
     box-shadow: 0px 1px 1px rgb(0 0 0 / 12%);
-    background-color: var(--white);
 }
 
 .inner {
@@ -36,24 +35,9 @@
 
     nav ul {
         display: flex;
-        list-style: none; // Removes bullets from the list
-        padding: 0; // Removes padding
-        margin: 0; // Removes margin
-
-        li {
-            button {
-                height: 60px;
-                font: 1.6rem;
-                background: none; // Removes background
-                border: none; // Removes border
-                color: inherit; // Inherits text color from parent
-                cursor: pointer; // Keeps the cursor as pointer to indicate clickable
-
-                &:hover {
-                    background-color: rgba(22, 24, 35, 0.03);
-                }
-            }
-        }
+        list-style: none;
+        padding: 0;
+        margin: 0;
     }
 }
 
