--- a/src/components/Popper/Popper.module.scss
+++ b/src/components/Popper/Popper.module.scss
@@ -5,4 +5,27 @@
     border-radius: 8px;
     background: rgb(255, 255, 255);
     box-shadow: rgb(0 0 0 / 12%) 0px 2px 12px;
+
+    /* Style cho scrollbar */
+    &::-webkit-scrollbar {
+        width: 8px; /* chiều rộng của thanh cuộn */
+    }
+
+    &::-webkit-scrollbar-track {
+        background: #f1f1f1; /* màu nền của track */
+    }
+
+    &::-webkit-scrollbar-thumb {
+        background: #888; /* màu của thumb */
+        border-radius: 4px; /* bo góc cho thumb */
+    }
+
+    &::-webkit-scrollbar-thumb:hover {
+        background: #555; /* màu khi hover vào thumb */
+    }
+}
+
+.search-popper {
+    max-height: 500px;
+    overflow-y: auto;
 }
