--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -20,8 +20,9 @@
 
 .icon {
     display: inline-block;
-    width: 24px;
+    width: 10px;
     text-align: center;
+    font-size: smaller;
 }
 
 .menu-item {
@@ -38,5 +39,30 @@
 
     .title {
         font-size: small;
+    }
+}
+
+.btn-style-2 {
+    max-height: 30px;
+    max-width: 80px;
+    background-color: #f5f5f5;
+    color: #000;
+    border: 1px solid #000;
+    border-radius: 5px;
+    cursor: pointer;
+    text-transform: uppercase;
+    transition: all 0.3s ease;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    .title {
+        margin: 0;
+        font-size: small;
+    }
+
+    &:hover {
+        background-color: #000;
+        color: #fff;
     }
 }
